tests/programs/errors/ffi_bad_arg.flow
extern fn abs(x:int):int

fn main() {
    let v:int = abs("hello")
}
